removing comments ai

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -75,10 +75,10 @@
 	}
 }
 
-div , h1 , h2 , img , p , span {
+/* div , h1 , h2 , img , p , span {
     @apply border-2 border-dotted border-red-400;
 
-  }
+  } */
 
 
 p{
