Switch Button controlling the state  v1

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -75,7 +75,7 @@
 	}
 }
 
-/* div , h1 , h2 , img , p , span {
+/* div , h1 , h2 , img , p , span , Switch , Label {
     @apply border-2 border-dotted border-red-400;
 
   } */
