--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -75,10 +75,11 @@
 	}
 }
 
-div , h1 , h2 , 
+div , h1 , h2 , h3,
 img , p , span , 
 header , footer , main , nav,
 button , 
+input,textarea,
 Switch , Label  {
     @apply border-2 border-dotted border-red-400 p-1; 
 
